<resources>
    <string name="app_name">Series Reminder</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="general_more">more</string>
    <string name="sample_text">In a future where humans can transfer their minds from body to body, a rebel is brought back to life to solve a twisted, high-stakes murder case. In a future where humans can transfer their minds from body to body, a rebel is brought back to life to solve a twisted, high-stakes murder case. In a future where humans can transfer their minds from body to body, a rebel is brought back to life to solve a twisted, high-stakes murder case. In a future where humans can transfer their minds from body to body, a rebel is brought back to life to solve a twisted, high-stakes murder case.</string>
    <string name="overview">Overview</string>
    <string name="ratings">Ratings</string>
    <string name="ratings_value">%d%% (%d votes)</string>
    <string name="genres">Genres</string>
    <string name="search">Search</string>
    <string name="episode_number" translatable="false">S%1$02dE%2$02d</string>
    <string name="sync_shows">Sync shows</string>
    <string name="sync_next_episodes">Sync next episodes</string>
    <string name="upcoming_episodes">Upcoming episodes</string>
    <string name="title_trending">Trending</string>
    <string name="title_popular">Popular</string>
    <string name="search_hint">Search Shows</string>
    <string name="title_my_shows">My shows</string>
    <string name="add_reminder">Add reminder</string>
    <string name="remove">Remove</string>
    <string name="channel_name">Reminders</string>
    <string name="channel_description">Reminders for episodes</string>
    <string name="air_time">%s %s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- show details -->
    <string name="overview_label">Overview</string>
    <string name="overview_next_episode">Next episode</string>

    <!--episodes-->
    <string name="episode_title_with_numbers">S%02dE%02d - %s</string>
    <string name="notification_episode_title_with_numbers">S%02dE%02d - %s is airing soon</string>

    <!-- Strings related to Settings -->

    <string name="category_notifications">Notifications</string>

    <string-array name="pref_before_show_starts_titles">
        <item>When show starts</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_before_show_starts_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notification_created">Notification created</string>
    <string name="notification_deleted">Notification deleted</string>
    <string name="related_shows_label">Related Shows</string>
    <string name="title_activity_episode">EpisodeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="overview_seasons">Seasons</string>
    <string name="seasons_progress">%d/%d</string>
    <string name="seasons_title">Season %d</string>
    <string name="watched_all">Watched All</string>
    <string name="aired">Aired</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_all">Show all</string>
    <string name="no_result_found">No result!</string>
    <string name="trakt_log_in">Log in to trakt.tv</string>
</resources>
