<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hu.csabapap.seriesreminder.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_collection_fragment"
            app:destination="@id/collection_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu_search"
        android:name="hu.csabapap.seriesreminder.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="hu.csabapap.seriesreminder.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_tratk_auth_fragment"
            app:destination="@id/trakt_auth_fragment" />
    </fragment>

    <fragment
        android:id="@+id/collection_fragment"
        android:name="hu.csabapap.seriesreminder.ui.main.collection.CollectionFragment"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/trakt_auth_fragment"
        android:name="hu.csabapap.seriesreminder.ui.traktauth.TraktAuthenticationFragment"
        tools:layout="@layout/fragment_trakt_authentication" />
</navigation>
