<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.csabapap.seriesreminder.ui.showdetails.ShowDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:contentScrim="@color/primaryColor"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|enterAlways">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_overlapTop="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--dependency-->
            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_container_size"
                android:background="@color/primaryDarkColor"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp">

                    <ImageView
                        android:id="@+id/poster_placeholder"
                        android:layout_width="66dp"
                        android:layout_height="match_parent"
                        android:background="@color/accentColor"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center_horizontal"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/show_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratings"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    tools:text="87% (384 votes)" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:lines="1"
                    tools:text="drama, horror" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- child -->
    <ImageView
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:background="@color/accentColor"
        android:elevation="0dp"
        app:layout_anchor="@id/title_container"
        app:layout_anchorGravity="bottom|start"
        app:layout_behavior="hu.csabapap.seriesreminder.utils.ScaleBehavior"
        tools:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
